--- a/task1/style.css
+++ b/task1/style.css
@@ -14,8 +14,8 @@ button {
   
   button:hover{
       background: transparent;
-      color:   rgb(214, 6, 6);;
-      border: .2rem solid rgb(214, 6, 6);
+      color:   grey;
+      border: .2rem solid grey;
   }
   
   
@@ -137,7 +137,7 @@ button {
       button{
           margin: 2rem 0;
           font-size: 2rem;
-          @include button()
+         
       }
       
       .icons{
@@ -224,8 +224,274 @@ button {
           color: white;
       }
   }
+
+
+
+  #about{
+    height: auto;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    background: 
+          linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+          url('about2.png');
+    
+    .content{
+        width: 90vw;
+    }
+    .content h1{
+        font-size: 4rem;
+        margin: 3rem 0;
+        color: rgb(214, 6, 6);
+    }
+    .content p{
+        font-size: 2rem;
+        padding-right: 6rem;
+        color: white;
+    }
+
+    .buttons{
+        padding-right: 2rem;
+    }
+    .buttons button{
+        
+        margin:2rem 2rem 2rem 0;
+        color: white;
+    }
+    .buttons button:hover{
+        color: grey;
+        border: .2rem solid grey;
+    }
+  }
+
+
+  #contact{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background: url(contact.png), linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7));
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+
+    from{
+        display: flex;
+        flex-flow: column;
+    }
+
+    from h1{
+        color: rgb(214, 6, 6);
+        font-size: 4rem;
+    }
+
+    from input{
+        height: 4rem;
+        background: transparent;
+        color: white;
+        margin: 2rem 0;
+        padding: 0 1rem;
+        border: .2rem solid orange;
+        outline: none;
+        font-weight: bold;
+
+        
+    }
+    
+    input[type="submit"]{
+        height: 4rem;
+        width: 14rem;
+        background: transparent;
+        border: .2rem solid white;
+        outline: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+        margin: 2rem 0;
+        font-size: 2rem;
+        color: white;
+        font-weight: bold;
+        background: url(send.png);
+        color: black;
+        border: .2rem solid transparent;
+
+        &:hover{
+            background: url(send\ hover.png);
+            color: orange;
+        }
+    }
+
+    textarea{
+        resize: none;
+        background: transparent;
+        border: .2rem solid orange;
+        color: white;
+        padding: 1rem;
+    }
+    
+  }
   
   
+  #footer{
+    height: auto;
+    width: 100vw;
+    display: grid;
+    place-items: center;
+    background: black;
+
+    .msg{
+        text-align: center;
+        color: white;
+        margin: 2rem 0;
+    }
+
+    .msg span{
+        color: orange;
+    }
+
+    .footer-container{
+        height: auto;
+        width: 90vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between; 
+        flex-wrap: wrap;
+           
+
+        
+        .brand{
+            margin: 3rem 0;
+            flex: 1 0 25rem;
+
+            .logo {
+                margin: 1rem 0;
+            }
+            
+            .logo a {
+                text-decoration: none;
+            }
+            
+            .logo h1 {
+                font-size: 3rem;
+                color: yellow;
+            }
+            
+            .logo h1 span {
+                color: rgb(214, 6, 6);
+            }
+
+            .icons{
+                display: flex;
+                flex-flow: column;
+
+                a{
+                    text-decoration: none;
+                    color: rgb(214, 6, 6);
+                    font-size: 3rem;
+                    margin: .5rem 0;
+                    position: relative;
+
+                    &::after{
+                        content: attr(data-text);
+                        position: absolute;
+                        top: .8rem; left: 3.5rem;
+                        font-family: 'Exo 2',sans-serif;
+                        font-style: italic;
+                        font-size: 1.5rem;
+                        color: white;
+                    }
+                }
+            }
+        }
+
+        .contact-info{
+            flex: 1 0 25rem;
+
+            .info{
+                height: 16rem;
+                width: 5rem;
+                background: rgb(214, 6, 6);
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                text-align: center;
+
+                a{
+                    font-size: 2rem;
+                    text-decoration: none;
+                    margin: 2rem 0;
+                    color: black;
+                    position: relative;
+
+                    &::after{
+                        content: attr(data-text);
+                        position: absolute;
+                        top: .5rem; left: 5.5rem;
+                        width: 20rem;
+                        text-align: left;
+                        font-family: 'Exo 2',sans-serif;
+                        font-style: italic;
+                        font-size: 1.5rem;
+                        color: white;
+                    }
+                }
+            }
+        }
+
+        .letter{
+            height: auto;
+            width: 20vw;
+            
+
+            h1{
+                font-size: 3rem;
+                color: white;
+            }
+            p{
+                font-size: 1.5rem;
+                color: rgb(214, 6, 6);
+            }
+
+            input{
+                height: 4rem;
+                width: 20rem;
+                background: transparent;
+                color: white;
+                margin: 2rem 0;
+                padding: 0 1rem;
+                border: .2rem solid orange;
+                outline: none;
+                font-weight: bold;
+        
+            }
+
+            input[type="submit"]{
+                height: 4rem;
+                width: 14rem;
+                background: transparent;
+                border: .2rem solid white;
+                outline: none;
+                font-size: 1.5rem;
+                cursor: pointer;
+                margin: 2rem 0;
+                font-size: 2rem;
+                color: white;
+                font-weight: bold;
+                background: url(send.png);
+                color: black;
+                border: .2rem solid transparent;
+        
+                &:hover{
+                    background: url(send\ hover.png);
+                    color: orange;
+                }
+            }
+        }
+    }
+  }
   
   
   
@@ -237,6 +503,18 @@ button {
       transform: rotateZ(360deg);
   }
   
+
+  .active{
+    background: #333;
+    box-shadow: 0 .1rem .3rem black;
+    padding: 1rem;
+  }
+
+
+
+
+
+
   @media (max-width: 991px) {
       html {
           font-size: 50%;
@@ -246,6 +524,23 @@ button {
   @media (max-width: 768px) {
       html {
           font-size: 40%;
+      }
+
+      #about{
+        flex-flow: column;
+        align-items: center;
+
+        .content{
+            text-align: center;
+        }
+        
+        .content p{
+            padding: 2rem;
+        }
+
+        .content .buttons{
+            padding: 0;
+        }
       }
   }
   
